# nl2sql

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sitecustomize.py  streamlit_app.py
data/: orders.csv
db/: nl2sql.duckdb
src/nl2sql_agent/: __main__.py  cli.py  db.py  llm.py  nl2sql.py
tests/: test_db_helpers.py
